[gd_scene load_steps=4 format=3 uid="uid://chnpftxdjlolx"]

[ext_resource type="Theme" path="res://theme/ui_theme.tres" id="1_ily5c"]
[ext_resource type="Script" path="res://menu/key_bind/key_bind_menu.gd" id="2_iwgeb"]
[ext_resource type="PackedScene" uid="uid://x0p57chh0teg" path="res://menu/key_bind/key_bind.tscn" id="3_073pb"]

[node name="KeyBindMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ily5c")
script = ExtResource("2_iwgeb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16

[node name="KB_MoveRight" parent="VBoxContainer" instance=ExtResource("3_073pb")]
layout_mode = 2
label_name = "Move Right"
action_name = "move_right"

[node name="KB_MoveLeft" parent="VBoxContainer" instance=ExtResource("3_073pb")]
layout_mode = 2
label_name = "Move Left"
action_name = "move_left"

[node name="KB_Jump" parent="VBoxContainer" instance=ExtResource("3_073pb")]
layout_mode = 2
label_name = "Jump"
action_name = "jump"

[node name="HBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Button" type="Button" parent="VBoxContainer/HBox"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 2
size_flags_horizontal = 4
text = "Apply
"

[node name="Button2" type="Button" parent="VBoxContainer/HBox"]
layout_mode = 2
text = "Cancel"
